--- a/configure.in
+++ b/configure.in
@@ -63,7 +63,7 @@ AC_DEFUN(AC_PATH_FIND_INCLUDES,
 ac_find_includes=
 for ac_dir in $1;
   do
-    if test -f "$ac_dir/$2"; then
+    if test -f "$ac_dir/$2" || test -L "$ac_dir/lib$2.$ac_extension"; then
       ac_find_includes=$ac_dir
       break
     fi
@@ -76,7 +76,7 @@ ac_find_libraries=
 for ac_dir in $1;
   do
     for ac_extension in a so sl; do
-      if test -f "$ac_dir/lib$2.$ac_extension"; then
+      if test -f "$ac_dir/lib$2.$ac_extension" || test -L "$ac_dir/lib$2.$ac_extension"; then
         ac_find_libraries=$ac_dir
         break 2
       fi
@@ -144,8 +144,11 @@ DEFAULT_USE_WXSTRING=0
 
 dnl search path for includes and libraries
 
+PYTHON_PATH="/usr/local/src/Python-1.3"
+
 SEARCH_INCLUDE="\
     ./extra/include	      \
+    $PYTHON_PATH/Include \
     /usr/include              \
     /usr/Motif1.2/include     \
 			      \
@@ -164,6 +167,7 @@ SEARCH_INCLUDE="\
     /usr/local/include/X11R6  \
     /usr/local/include/X11R5  \
     /usr/local/include/X11R4  \
+    /usr/local/include        \	
     /usr/local/src            \	
                               \
     /usr/X11/include          \
@@ -184,6 +188,7 @@ SEARCH_INCLUDE="\
     /usr/openwin/include      \
     /usr/openwin/share/include \
     "
+
 PWD=`pwd`
 SEARCH_INCLUDE="   \
 $PWD               \
@@ -194,6 +199,12 @@ $SEARCH_INCLUDE    \
 
 SEARCH_LIB="`echo "$SEARCH_INCLUDE" | sed s/include/lib/g` \
     "
+                              \
+SEARCH_LIB="\
+    $SEARCH_LIB \
+    $PYTHON_PATH/Python \
+    $PYTHON_PATH/Modules \
+"
 
 AC_CONFIG_HEADER(include/config.h)
 
@@ -380,15 +391,18 @@ AC_SUBST(XPM_INCLUDE)
 
 PYTHON_LINK=
 AC_MSG_CHECKING(for Python)
-AC_PATH_FIND_INCLUDES($SEARCH_INCLUDE,python/Python.h)
+AC_PATH_FIND_INCLUDES($SEARCH_INCLUDE,Python.h)
 if test "$ac_find_includes" != "" ; then
   AC_PATH_FIND_LIBRARIES($SEARCH_LIB,Python)
   if test "$ac_find_libraries" != "" ; then
+  echo $ac_find_libraries
     AC_INCLUDE_PATH_EXIST($ac_find_includes,$CHECK_INCLUDE)
     AC_LINK_PATH_EXIST($ac_find_libraries,$CHECK_LIB)
     CHECK_LINK="$CHECK_INCLUDE $ac_path_to_link"
     CHECK_INCLUDE="$CHECK_INCLUDE $ac_path_to_include"
-    PYTHON_LINK="$ac_path_to_link -lModules -lPython -lObjects -lParser"
+    PYTHON_LINK="$ac_path_to_link $PYTHON_PATH/Modules/config.o $PYTHON_PATH/Modules/getpath.o -L$PYTHON_PATH/Python \
+    -L$PYTHON_PATH/Modules -lModules -lPython -L$PYTHON_PATH/Objects -lObjects \
+    -L$PYTHON_PATH/Parser -lParser"
     PYTHON_INCLUDE="$ac_path_to_include"
     AC_DEFINE(USE_PYTHON)
     AC_MSG_RESULT(yes)
@@ -403,6 +417,20 @@ fi
 
 AC_SUBST(PYTHON_LINK)
 AC_SUBST(PYTHON_INCLUDE)
+
+LIBDL_LINK=
+AC_MSG_CHECKING(for dl library)
+AC_PATH_FIND_LIBRARIES($SEARCH_LIB,dl)
+if test "$ac_find_libraries" != "" ; then
+  AC_LINK_PATH_EXIST($ac_find_libraries,$CHECK_LIB)
+  CHECK_LINK="$CHECK_INCLUDE $ac_path_to_link"
+  LIBDL_LINK="$ac_path_to_link -ldl"
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_RESULT(no)
+fi
+AC_SUBST(LIBDL_LINK)
+
 
 LIBINTL_LINK=
 AC_MSG_CHECKING(for intl library)
@@ -437,6 +465,7 @@ AC_HEADER_STDC
 AC_CHECK_HEADERS(strings.h unistd.h)
 AC_CHECK_HEADERS(libintl.h)
 AC_CHECK_HEADERS(compface.h)
+AC_CHECK_HEADERS(stdlib.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
