--- a/include/config.h.in
+++ b/include/config.h.in
@@ -37,6 +37,9 @@
 /** Define if you have the <strings.h> header file.  */
 #undef HAVE_STRINGS_H
 
+/** Define if you have the <stlib.h> header file.  */
+#undef HAVE_STDLIB_H
+
 /** Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
