- almost fixed handling/highlighting of URLs in messages - added some (testing) python code and the required changes to configure stuff

--- a/configure.in
+++ b/configure.in
@@ -281,6 +281,8 @@ AC_LANG_RESTORE
 AC_PROG_MAKE_SET
 AC_ISC_POSIX
 
+dnl we use C++ so we always have prototypes
+AC_DEFINE(HAVE_PROTOTYPES)
 
 dnl find the X11 include and library files
 AC_PATH_XTRA
