--- a/include/config.h.in
+++ b/include/config.h.in
@@ -1,4 +1,10 @@
-/*-*- c++ -*-*/
+/*-*- c++ -*-********************************************************
+ * config.h.in: config.h template file for use with autoconf        *
+ *                                                                  *
+ * (C) 1998 by Karsten Ballüder (Ballueder@usa.net)                 *
+ *                                                                  *
+ * $Id$           *
+ *******************************************************************/
 /**@name config.h.in: Defines generated automatically from configure.in by autoheader.  */
 //@{
 /** Define to empty if the keyword does not work.  */
@@ -37,7 +43,8 @@
 /** Define if you have the <strings.h> header file.  */
 #undef HAVE_STRINGS_H
 
-/** Define if you have the <stlib.h> header file.  */
+/** Define if you have the <stlib.h> header file - required for
+/** Python.h .  */
 #undef HAVE_STDLIB_H
 
 /** Define if you have the <unistd.h> header file.  */
@@ -60,5 +67,9 @@
 
 /** Define if you use Python. */
 #undef USE_PYTHON
+
+/** Define if the C++ compiler supports prototypes (of course it
+/** does!) - required for Python.h */
+#undef HAVE_PROTOTYPES
 
 //@}
