Fixed _lots_ of problems introduced by Vadim's efforts to introduce precompiled headers. Compiles and runs again under Linux/wxXt. Header organisation is not optimal yet and needs further cleanup. Reintroduced some older fixes which apparently got lost before.

--- a/configure.in
+++ b/configure.in
@@ -1,3 +1,4 @@
+dnl $Id$
 
 AC_DEFUN(AC_OVERRIDES_PREPARE,
 [
@@ -248,6 +249,10 @@ dnl   defines GCC empty if not using gcc
 dnl   defines CFLAGS
 
 CFLAGS=`echo "$CFLAGS" | sed 's/-g//g'`
+if test "$GCC" = "yes"
+then
+	CFLAGS="$CFLAGS -DCC_GCC"
+fi
 
 dnl does compiler support -c and -o simultaniously
 AC_PROG_CC_C_O
