--- a/configure.in
+++ b/configure.in
@@ -289,6 +289,30 @@ AC_ISC_POSIX
 dnl we use C++ so we always have prototypes
 AC_DEFINE(HAVE_PROTOTYPES)
 
+works=no
+AC_MSG_CHECKING(for variable length prototypes and stdarg.h)
+AC_TRY_COMPILE([
+#include <stdarg.h>
+int foo(int x, ...) {
+	va_list va;
+	va_start(va, x);
+	va_arg(va, int);
+	va_arg(va, char *);
+	va_arg(va, double);
+	return 0;
+}
+], [return foo(10, "", 3.14);],
+AC_DEFINE(HAVE_STDARG_PROTOTYPES) works=yes)
+AC_MSG_RESULT($works)
+
+if test "$have_prototypes" = yes; then
+bad_prototypes=no
+AC_MSG_CHECKING(for bad exec* prototypes)
+AC_TRY_COMPILE([#include <unistd.h>], [char **t;execve("@",t,t);], ,
+	AC_DEFINE(BAD_EXEC_PROTOTYPES) bad_prototypes=yes)
+AC_MSG_RESULT($bad_prototypes)
+fi
+
 dnl find the X11 include and library files
 AC_PATH_XTRA
 dnl   defines x_includes and x_libraries
@@ -479,6 +503,7 @@ AC_CHECK_HEADERS(strings.h unistd.h)
 AC_CHECK_HEADERS(libintl.h)
 AC_CHECK_HEADERS(compface.h)
 AC_CHECK_HEADERS(stdlib.h)
+AC_CHECK_HEADERS(stdarg.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
