--- a/makeopts.in
+++ b/makeopts.in
@@ -1,9 +1,21 @@
+#
+# makeopts template file for M
+#
+# $Id$
+#
+# $Log$
+# Revision 1.5  1998/05/18 17:48:14  KB
+# more list<>->kbList changes, fixes for wxXt, improved makefiles
+#
+#
 # set build root directory:
 BUILDDIR = @BUILDDIR@
 
 # the c-client library:
-IMAPDIR=$(BUILDDIR)/imap-4.1.BETA
-CCLIENTDIR=$(IMAPDIR)/c-client
+# hard-coded, could be looked up by configure...
+
+#IMAPDIR=$(BUILDDIR)/imap-4.1.BETA
+CCLIENTDIR=$(BUILDDIR)/extra/src/c-client
 CCLIENTINCLUDE=$(CCLIENTDIR)
 CCLIENTLIB=$(CCLIENTDIR)/c-client.a
 CCLIENTOSTYPE=lnx
@@ -81,18 +93,21 @@ X_PRE_LIBS = @X_PRE_LIBS@
 XPM_INCLUDE = @XPM_INCLUDE@
 XPM_LINK = @XPM_LINK@
 
+EXTRA_SRC_INC = @EXTRA_SRC_INC@
+EXTRA_SRC_LIB = @EXTRA_SRC_LIB@
+
 LINK = $(CXX) 
 
 DEF = $(GUI_DEFS)
 INC = -I$(BUILDDIR)/include -I$(BUILDDIR)/extra/include -I$(BUILDDIR)/include/gui -I$(CCLIENTINCLUDE) \
-      $(GUI_INCLUDE) $(PYTHON_INCLUDE) $(XPM_INCLUDE)
+      $(GUI_INCLUDE) $(PYTHON_INCLUDE) $(XPM_INCLUDE) $(EXTRA_SRC_INC)
 CFLAGS = @CFLAGS@ $(OPT) $(DBG) $(DEF) $(INC)
 CXXFLAGS = @CXXFLAGS@ $(OPT) $(DBG) $(DEF) $(INC)
 LDFLAGS  = $(OPT) $(GUI_LDFLAGS) 
 
 LIBS= \
   -L$(BUILDDIR)/extra/lib \
-  $(EXTRALIBS) $(CCLIENTLIB) \
+  $(EXTRALIBS) $(EXTRA_SRC_LIB) $(CCLIENTLIB) \
   $(GUI_LINK) \
   $(XPM_LINK) \
   $(PYTHON_LINK) \
@@ -101,7 +116,7 @@ LIBS= \
   $(X_LIBS) -lX11 -lm
 
 SLIBS= \
-  $(EXTRALIBS) $(CCLIENTLIB) \
+  $(EXTRALIBS) $(EXTRA_SRC_LIB) $(CCLIENTLIB) \
   $(GUI_SLINK) \
   $(XPM_LINK) \
   $(PYTHON_LINK) \
