--- a/src/Python/Makefile
+++ b/src/Python/Makefile
@@ -3,6 +3,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.3  1998/05/19 17:02:43  KB
+# several small bugfixes
+#
 # Revision 1.2  1998/05/02 18:31:38  KB
 # Python integration works.
 #
@@ -12,15 +15,13 @@ CWD = Python
 
 SWIGSRC = MTest.i MApplication.i Profile.i 
 CXXSRC = InitPython.cc
-HDR = $(CXXSRC:.cc=.h)
-DEP = $(CXXSRC:.cc=.d)
+SRC=$(CXXSRC) *.cpp
 
 CXXTARGETS= $(CXXSRC:.cc=.o)
 SWIGTARGETS = $(SWIGSRC:.i=.o)
 SOTARGETS	=$(OTARGETS:.o=cmodule.so)
 
 all:	$(CXXTARGETS) $(SWIGTARGETS)
-
 
 .PHONY: mkswig all
 
