--- a/src/Python/Makefile
+++ b/src/Python/Makefile
@@ -3,6 +3,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.4  1998/05/24 08:28:58  KB
+# eventually fixed the type problem, now python works as expected
+#
 # Revision 1.3  1998/05/19 17:02:43  KB
 # several small bugfixes
 #
@@ -13,7 +16,7 @@
 
 CWD = Python
 
-SWIGSRC = MTest.i MApplication.i Profile.i 
+SWIGSRC = String.i MApplication.i Profile.i 
 CXXSRC = InitPython.cc
 SRC=$(CXXSRC) *.cpp
 
