--- a/src/Python/Makefile
+++ b/src/Python/Makefile
@@ -3,6 +3,10 @@
 # $Id$
 #
 # $Log$
+# Revision 1.6  1998/05/24 14:47:33  KB
+# lots of progress on Python, but cannot call functions yet
+# kbList fixes again?
+#
 # Revision 1.5  1998/05/24 07:54:14  KB
 # works?
 #
@@ -20,11 +24,11 @@
 CWD = Python
 
 SWIGSRC = MApplication.i MailFolder.i String.i Profile.i 
-CXXSRC = InitPython.cc
+CXXSRC = InitPython.cc PythonHelp.cc
 SRC=$(CXXSRC) *.cpp
 
 CXXTARGETS= $(CXXSRC:.cc=.o)
-SWIGTARGETS = $(SWIGSRC:.i=.o)
+SWIGTARGETS = $(SWIGSRC:.i=.o) $(SWIGSRC:.i=.py)
 SOTARGETS	=$(OTARGETS:.o=cmodule.so)
 
 all:	$(CXXTARGETS) $(SWIGTARGETS)
@@ -35,4 +39,5 @@ include ../../makerules
 include ../../makeopts
 clean:
 	$(RM) *.o *.so *.pyc *.py *.doc
+	ln -s INIT/Minit.py .
 
