--- a/include/config.h.in
+++ b/include/config.h.in
@@ -75,6 +75,9 @@
 /** Define if you use Python. */
 #undef USE_PYTHON
 
+/** Define if we have the swigpy library from SWIG. */
+#undef HAVE_SWIGLIB 
+
 /** Define if the C++ compiler supports prototypes (of course it
     does!) - required for Python.h */
 #undef HAVE_PROTOTYPES
