--- a/configure.in
+++ b/configure.in
@@ -261,6 +261,10 @@ AC_OVERRIDES(efence,efence,
 --with-efence             use ElectricFence,
 USE_EFENCE)
 
+AC_OVERRIDES(thread,threads,
+--with-threads            link with libpthread,
+USE_THREADS)
+
 AC_CONFIG_AUX_DIR(extra/scripts)
 
 dnl ###################
@@ -611,6 +615,11 @@ fi
 dnl electric fence
 if test "$USE_EFENCE" = 1; then
 	EXTRA_LINK="$EXTRA_LINK -lefence"
+fi
+
+dnl add pthreads to libraries
+if test "$USE_THREADS" = 1; then
+	EXTRA_LINK="$EXTRA_LINK -lpthread"
 fi
 
 AC_SUBST(EXTRA_LINK)
